x.x.x (YYYY-MM-DD):
  - Made Item.typeName and Item.schemaVersion optional in most cases.

0.4.0 (2005-12-20):
  - Fixed sum() in the case of a table with no rows.
  - LoginAccount no longer contains authentication information, but may be
    referred to by one or more LoginMethods, which do.
  - Added an attribute type for floats: ieee754_double.
  - Enhanced functionality in axiom.sequence.List.
  - Added support for SQL DISTINCT queries.
  - On the command line, axiomatic will attempt to automatically discover
    the correct database to use, if one is not specified.
  - PID and logfiles are now kept in a subdirectory of the database
    directory.
  - The "start" axiomatic subcommand now works on Windows.
  - Two new axiomatic subcommands have been added related to running servers
    from Axiom database: "stop" and "status".
  - Two new axiomatic subcommands have been added related to user
    management: "extract-user" and "insert-user" for removing users from and
    adding users to an existing credentials database, along with all of
    their data.
  - Axiom queries can now be sorted by a tuple of columns.

0.3.0 (2005-11-02):
  - Removed Axiom/axiom/examples/axiom.tac
  - Added 'axiomatic start'
  - added 'hyper', a 'super' capable of working with Item mixins
  - added check to make sure Unicode strings won't be misleadingly persisted as
    bytes(), like so:
        >>> str(buffer(u'hello'))
        'h\x00\x00\x00e\x00\x00\x00l\x00\x00\x00l\x00\x00\x00o\x00\x00\x00'
  - formalized and improved query result to be an object with its own interface
    rather than a generator
  - correctly call activate() on items after they have been upgraded

0.2.0 (2005-10-27):
  - Removed accidental Mantissa dependency
  - Automatic upgrade service added
  - Lots of new docstrings
  - Query utility module added, with a function for finding overlapping
    ranges
  - Added formal interface for the `where' argument to Store.query()
  - Added 'oneOf' attribute